--- a/DeniZeus/DeniZeus.vcxproj
+++ b/DeniZeus/DeniZeus.vcxproj
@@ -161,9 +161,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="JSON.hpp" />
     <ClInclude Include="memory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="urdl\option_set.hpp" />
+    <ClInclude Include="urdl\read_stream.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
