--- a/DeniZeus/DeniZeus.vcxproj
+++ b/DeniZeus/DeniZeus.vcxproj
@@ -165,7 +165,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="JSON.hpp" />
+    <ClInclude Include="FindPattern.h" />
+    <ClInclude Include="JSON.h" />
     <ClInclude Include="memory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -173,6 +174,8 @@
     <ClInclude Include="urdl\read_stream.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FindPattern.cpp" />
+    <ClCompile Include="JSON.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
