--- a/DeniZeus/DeniZeus.vcxproj.filters
+++ b/DeniZeus/DeniZeus.vcxproj.filters
@@ -3,13 +3,16 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="FindPattern.cpp" />
+    <ClCompile Include="JSON.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="JSON.hpp" />
     <ClInclude Include="memory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="urdl\option_set.hpp" />
     <ClInclude Include="urdl\read_stream.hpp" />
+    <ClInclude Include="FindPattern.h" />
+    <ClInclude Include="JSON.h" />
   </ItemGroup>
 </Project>
